<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ar.com.vittal.vittalgetapp.InformationFragment">

    <TextView
        android:id="@+id/informationTitle"
        style="@style/InformationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_information_title" />

    <TextView
        android:id="@+id/informationStep1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="60dp"
        android:text="@string/main_information_step1" />

    <TextView style="@style/LinedText"
        android:id="@+id/informationCallLink"
        android:layout_toEndOf="@id/informationStep1"
        android:layout_toRightOf="@id/informationStep1"
        android:layout_alignBaseline="@id/informationStep1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/informationStep1"
        android:text="@string/main_information_step2" />

</RelativeLayout>
